--- a/src/Club/Views/Users/Details.cshtml
+++ b/src/Club/Views/Users/Details.cshtml
@@ -35,7 +35,7 @@
                             {
                                 <li role="separator" class="divider"></li>
                                 <li>
-                                    <a asp-action="Letter">Descargar carta</a>
+                                    <a  asp-route-id="@Model.Username" asp-action="Letter">Descargar carta</a>
                                 </li>
                             }
                         </ul>
