Administración de usuarios.

--- a/src/Club/Views/Users/Edit.cshtml
+++ b/src/Club/Views/Users/Edit.cshtml
@@ -26,20 +26,31 @@
             <label asp-for="LevelId"></label>
             <select asp-for="LevelId" class="form-control" asp-items="@ViewBag.SelectUserLevels"></select>
         </div>
-        <div class="form-group col-md-4">
-            <label asp-for="IsAdmin"></label>
-            <input asp-for="IsAdmin" class="form-control" />
-        </div>
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="form-group col-md-2">
+                <label asp-for="IsAdmin"></label>
+                <input asp-for="IsAdmin" class="form-control"/>
+            </div>
+        }
+        @if (User.IsInRole("SuperAdmin"))
+        {
+            <div class="form-group col-md-2">
+                <label asp-for="IsSuperAdmin"></label>
+                <input asp-for="IsSuperAdmin" class="form-control" />
+            </div>
+
+        }
     </div>
-        <div class="form-group">
-            @Html.LabelFor(i => i.Email)
-            <input class="form-control" asp-for="Email" type="email" />
-            <span class="text-muted" asp-validation-for="Email"></span>
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-success" value="Guardar" />
-            <a  class="btn btn-success" asp-action="details" asp-route-username="@Model.Username">Cancelar</a>
-        </div>
+    <div class="form-group">
+        @Html.LabelFor(i => i.Email)
+        <input class="form-control" asp-for="Email" type="email" />
+        <span class="text-muted" asp-validation-for="Email"></span>
+    </div>
+    <div class="form-group">
+        <input type="submit" class="btn btn-success" value="Guardar" />
+        <a class="btn btn-success" asp-action="details" asp-route-username="@Model.Username">Cancelar</a>
+    </div>
 </form>
 
 @section Scripts {
