--- a/src/Club/Views/Account/Login.cshtml
+++ b/src/Club/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Club.ViewModels.LoginViewModel
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Iniciar sesión";
 }
 
 <h3>@ViewBag.Title</h3>
