--- a/src/Club/Views/Announcements/Create.cshtml
+++ b/src/Club/Views/Announcements/Create.cshtml
@@ -4,8 +4,7 @@
     ViewBag.Title = "Nuevo aviso";
 }
 
-
-<h2>Crear aviso</h2>
+<h2>@ViewBag.Title</h2>
 <form method="post" novalidate>
     <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
 
