--- a/src/Club/Views/Home/Contact.cshtml
+++ b/src/Club/Views/Home/Contact.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Contacto";
 }
 
-<h2>Contacto</h2>
+<h2>@ViewBag.Title</h2>
 <form method="post">
     @if (ViewBag.Message != null)
     {
