--- a/src/Club/Views/Terms/Create.cshtml
+++ b/src/Club/Views/Terms/Create.cshtml
@@ -10,7 +10,7 @@
 
 
 
-<h2>Crear periodo</h2>
+<h2>@ViewBag.Title</h2>
 <form method="post" novalidate>
     <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
     <div class="row">
