--- a/src/Club/Views/Topics/Create.cshtml
+++ b/src/Club/Views/Topics/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<h2>Añadir problema</h2>
+<h2>@ViewBag.Title</h2>
 <form method="post" novalidate>
     <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
 
