--- a/src/Club/Views/Topics/Index.cshtml
+++ b/src/Club/Views/Topics/Index.cshtml
@@ -1,11 +1,10 @@
 ﻿@model List<Club.ViewModels.TopicViewModel>
 
     @{
-        ViewBag.Title = "Añadir tema";
+        ViewBag.Title = "Temas";
     }
 
 
-    @*<h2>Temas</h2>*@
     <form method="post" novalidate>
         <table class="table table-responsive">
             <thead>
