--- a/src/Club/Views/Users/Details.cshtml
+++ b/src/Club/Views/Users/Details.cshtml
@@ -60,7 +60,7 @@
                     <table class="table table-responsive">
                         <thead>
                         <tr>
-                            <th>Evento</th>
+                            <th>Sesión</th>
                             <th>Ubicación</th>
                             <th>Fecha</th>
                             <th>Duración</th>
