--- a/src/Club/Views/Dashboard/Index.cshtml
+++ b/src/Club/Views/Dashboard/Index.cshtml
@@ -20,7 +20,7 @@
                     <p class="list-group-item-text">@term.Start.ToShortDateString() - @term.End.ToShortDateString()</p>
                 </a>
                 <a asp-controller="events" asp-action="create" class="list-group-item">
-                    Nuevo evento <span class="badge"><i class="fa fa-calendar-plus-o"></i></span>
+                    Nueva sesión <span class="badge"><i class="fa fa-calendar-plus-o"></i></span>
                 </a>
             }
             else
@@ -29,7 +29,7 @@
                    class="list-group-item list-group-item-warning">
                     <h3 class="list-group-item-heading">Registra un periodo</h3>
                     <p class="list-group-item-text">
-                        Debes registrar un periodo para poder registrar eventos
+                        Debes registrar un periodo para poder registrar sesiones
                     </p>
                 </a>
             }
