--- a/src/Club/Views/Events/Create.cshtml
+++ b/src/Club/Views/Events/Create.cshtml
@@ -2,18 +2,16 @@
 @model Club.ViewModels.EventViewModel
 
 @{
-    ViewBag.Title = "Nuevo evento";
+    ViewBag.Title = "Nueva sesión";
 
     var term = ViewBag.Term as TermViewModel;
 }
 
-
-
-<h2>Crear evento</h2>
+<h2>@ViewBag.Title</h2>
 @if (term == null)
 {
     <div class="alert alert-warning" role="alert">
-        <strong>No existe un periodo para este evento</strong>, puedes crear uno aquí
+        <strong>No existe un periodo para esta sesión</strong>, puedes crear uno aquí
     </div>
 }
 else
