--- a/src/Club/Views/Problems/Create.cshtml
+++ b/src/Club/Views/Problems/Create.cshtml
@@ -4,8 +4,7 @@
     ViewBag.Title = "Añadir problema";
 }
 
-
-<h2>Añadir problema</h2>
+<h2>@ViewBag.Title</h2>
 <form method="post" novalidate>
     <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
 
