--- a/src/Club/Views/Users/Index.cshtml
+++ b/src/Club/Views/Users/Index.cshtml
@@ -14,7 +14,7 @@
                     <th>Usuario</th>
                     <th>Nombre</th>
                     <th>Apellidos</th>
-                    <th>Eventos</th>
+                    <th>Sesiones</th>
                 </tr>
             </thead>
             <tbody>
