--- a/src/Club/Views/Dashboard/Index.cshtml
+++ b/src/Club/Views/Dashboard/Index.cshtml
@@ -61,6 +61,10 @@
                 <span class="badge">@Model.UsersAwaitingApprovalCount</span>
                 Usuarios pendientes de aprobación
             </a>
+
+            <a asp-action="index" asp-controller="settings" class="list-group-item">
+                Configuración
+            </a>
         </div>
     </div>
     <div class="col-lg-8">
