--- a/src/Club/Views/Shared/_Layout.cshtml
+++ b/src/Club/Views/Shared/_Layout.cshtml
@@ -10,61 +10,67 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-inverse">
-            <div class="container container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a asp-controller="home" asp-action="index" class="navbar-brand">Club</a>
-                </div>
+    <!-- Wrap all page content here -->
+    <div id="wrap">
+        <header>
+            <nav class="navbar navbar-inverse" id="header">
+                <div id="headerNav" class="container container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a id="homeLink" asp-controller="home" asp-action="index" class="navbar-brand">&nbsp;</a>
+                    </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a asp-controller="calendar" asp-action="index">Calendario</a></li>
-                        <li><a asp-controller="announcements" asp-action="index">Avisos</a></li>
-                        <li><a asp-controller="home" asp-action="contact">Contacto</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li><a asp-controller="users" asp-action="details" asp-route-username="@User.Identity.Name">@User.Identity.Name</a></li>
-                            if (User.IsInRole("Admin"))
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a asp-controller="calendar" asp-action="index">Calendario</a></li>
+                            <li><a asp-controller="announcements" asp-action="index">Avisos</a></li>
+                            <li><a asp-controller="home" asp-action="contact">Contacto</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            @if (User.Identity.IsAuthenticated)
                             {
-                                 <li><a asp-controller="dashboard" asp-action="index">Dashboard</a></li>
+                                <li><a asp-controller="users" asp-action="details" asp-route-username="@User.Identity.Name">@User.Identity.Name</a></li>
+                                if (User.IsInRole("Admin"))
+                                {
+                                    <li><a asp-controller="dashboard" asp-action="index">Dashboard</a></li>
 
+                                }
+                                <li><a asp-controller="problems" asp-action="index">Problemas</a></li>
+                                <li><a asp-controller="account" asp-action="logout">Logout</a></li>
                             }
-                            <li><a asp-controller="problems" asp-action="index">Problemas</a></li>
-                            <li><a asp-controller="account" asp-action="logout">Logout</a></li>
-                        }
-                        else
-                        {
-                            <li><a asp-controller="account" asp-action="login">Login</a></li>
-                        }
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
+                            else
+                            {
+                                <li><a asp-controller="account" asp-action="login">Login</a></li>
+                            }
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
 
 
-    </header>
+        </header>
 
-    <div class="container-fluid" id="main">
+        <div class="container-fluid" id="main">
 
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                @RenderBody()
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    @RenderBody()
+                </div>
             </div>
         </div>
     </div>
-    <footer></footer>
-
+    <footer id="footer">
+        <div class="container">
+            <p class="text-muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+        </div>
+    </footer>
     @* Scripts *@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
