--- a/src/Club/Views/Events/Detail.cshtml
+++ b/src/Club/Views/Events/Detail.cshtml
@@ -39,6 +39,10 @@
                         <li>
                             <a href="#" id="PrintButton">Imprimir</a>
                         </li>
+                        @if (Model.TimeStatus == Club.ViewModels.EventStatus.Future || Model.TimeStatus == Club.ViewModels.EventStatus.Ongoing)
+                        {
+                            <li><a href="@Url.Action("edit", new {id = Model.Id})">Editar</a></li>
+                        }
                         <li role="separator" class="divider"></li>
                         <li><a href="@Url.Action("delete", new {id = Model.Id})">Eliminar</a></li>
                     </ul>
