--- a/src/Club/Views/Shared/_Layout.cshtml
+++ b/src/Club/Views/Shared/_Layout.cshtml
@@ -4,8 +4,51 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/bootswatch/flatly/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/bootswatch/@Club.Startup.Settings.Theme/bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <style>
+        nav#header {
+            min-height: 80px;
+            padding: 0;
+        }
+
+
+            nav#header #headerNav {
+                padding-top: 10px;
+                background-image: url(../../../assets/headerbg.png);
+                background-position: top left;
+                background-repeat: no-repeat;
+                min-height: 80px;
+            }
+
+        #homeLink {
+            width: 250px;
+        }
+
+        /* Fixed crap */
+
+        html,
+        body {
+            height: 100%;
+            /* The html and body elements cannot have any padding or margin. */
+        }
+
+        /* Wrapper for page content to push down footer */
+        #wrap {
+            min-height: 100%;
+            height: auto;
+            /* Negative indent footer by its height */
+            margin: 0 auto -80px;
+            /* Pad bottom by footer height */
+            padding: 0 0 80px;
+        }
+
+        /* Set the fixed height of the footer here */
+        #footer {
+            height: 80px;
+            background-color: #f5f5f5;
+        }
+    </style>
     @RenderSection("Styles", false)
     <title>@ViewBag.Title</title>
 </head>
@@ -68,7 +111,7 @@
     </div>
     <footer id="footer">
         <div class="container">
-            <p class="text-muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+            @Html.Raw(Club.Startup.Settings.HtmlFooter)
         </div>
     </footer>
     @* Scripts *@
