Event edit missing dates.

--- a/src/Club/Views/Events/Edit.cshtml
+++ b/src/Club/Views/Events/Edit.cshtml
@@ -66,19 +66,8 @@
             <span asp-validation-for="End"></span>
         </div>
     </div>
-    <div class="row">
-        <div class="form-group  col-md-3">
-            <label asp-for="Repeat"></label>
-            <input asp-for="Repeat" class="form-control" />
-        </div>
-        <div class="form-group col-md-9">
-            <label asp-for="RepeatUntil"></label>
-            <input asp-for="RepeatUntil" class="form-control" />
-            <span asp-validation-for="RepeatUntil"></span>
-        </div>
-    </div>
     <div class="form-group">
-        <input type="submit" value="Crear" class="btn btn-success" />
+        <input type="submit" value="Guardar" class="btn btn-success" />
     </div>
 </form>
 
