--- a/src/Club/Views/_ViewImports.cshtml
+++ b/src/Club/Views/_ViewImports.cshtml
@@ -1,1 +1,4 @@
 ﻿@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+@*@using Microsoft.AspNet.Mvc.Localization*@
+@using Microsoft.Extensions.Localization
+@inject IStringLocalizer<Club.Resources.ClubLoc> TranslateLocalizer
