--- a/src/Club/Views/Users/Details.cshtml
+++ b/src/Club/Views/Users/Details.cshtml
@@ -7,14 +7,14 @@
     <div>
         <div class="row">
             <div class="col-lg-12">
-                <h2>@Model.Username</h2>
+                <h2>@Model.Username <small>@Model.FirstName @Model.LastName</small></h2>
                 <input type="hidden" id="id" value="@Model.Username" />
             </div>
         </div>
 
         <div class="row">
             <div class="col-lg-5">
-                <p class="lead">@Model.FirstName @Model.LastName</p>
+
                 <p class="lead">@Model.Level</p>
             </div>
             @if (User.Identity.IsAuthenticated)
@@ -50,69 +50,76 @@
             <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#events" aria-controls="home" role="tab" data-toggle="tab">Asistencias</a></li>
                 <li role="presentation"><a href="#problems" aria-controls="profile" role="tab" data-toggle="tab">Problemas resueltos</a></li>
+                @if (User.IsInRole("Admin"))
+                {
+                    <li role="presentation"><a href="#notes" aria-controls="notes" role="tab" data-toggle="tab">Notas</a></li>
+                }
             </ul>
 
             <!-- Tab panes -->
             <div ng-app="app-attended-events" class="tab-content">
-                
-                <div 
-                     ng-controller="attendedEventsController as vm" role="tabpanel" class="tab-pane active" id="events">
+                <div ng-controller="attendedEventsController as vm" role="tabpanel" class="tab-pane active" id="events">
                     <table class="table table-responsive">
                         <thead>
-                        <tr>
-                            <th>Sesión</th>
-                            <th>Ubicación</th>
-                            <th>Fecha</th>
-                            <th>Duración</th>
-                        </tr>
+                            <tr>
+                                <th>Sesión</th>
+                                <th>Ubicación</th>
+                                <th>Fecha</th>
+                                <th>Duración</th>
+                            </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="user in vm.queriedUsers">
-                            <td>{{ user.name }}</td>
-                            <td>{{ user.location }}</td>
-                            <td>{{ user.start | date:'medium' }}</td>
-                            <td>{{ user.duration }}</td>
-                        </tr>
+                            <tr ng-repeat="user in vm.queriedUsers">
+                                <td>{{ user.name }}</td>
+                                <td>{{ user.location }}</td>
+                                <td>{{ user.start | date:'medium' }}</td>
+                                <td>{{ user.duration }}</td>
+                            </tr>
                         </tbody>
                         <tfoot>
-                        <tr>
-                            <td colspan="3">
-                                <div class="btn-group" role="group" aria-label="...">
-                                    <button ng-click="vm.previousPage();" class="btn btn-default" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </button>
-                                    <button type="button" class="btn btn-default">
-                                        {{ vm.currentPage }} / {{ vm.totalPages }}
-                                    </button>
-                                    <button ng-click="vm.nextPage();" class="btn btn-default" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </button>
-                                </div>
+                            <tr>
+                                <td colspan="3">
+                                    <div class="btn-group" role="group" aria-label="...">
+                                        <button ng-click="vm.previousPage();" class="btn btn-default" aria-label="Previous">
+                                            <span aria-hidden="true">&laquo;</span>
+                                        </button>
+                                        <button type="button" class="btn btn-default">
+                                            {{ vm.currentPage }} / {{ vm.totalPages }}
+                                        </button>
+                                        <button ng-click="vm.nextPage();" class="btn btn-default" aria-label="Next">
+                                            <span aria-hidden="true">&raquo;</span>
+                                        </button>
+                                    </div>
 
-                            </td>
-                        </tr>
+                                </td>
+                            </tr>
                         </tfoot>
                     </table>
                 </div>
-                <div 
-                     ng-controller="submissionsController as tt" role="tabpanel" class="tab-pane" id="problems">
+                <div ng-controller="submissionsController as tt" role="tabpanel" class="tab-pane" id="problems">
                     <table class="table table-responsive">
                         <thead>
-                        <tr>
-                            <th>Problema</th>
-                            <th>Estatus</th>
-                            <th>Fecha</th>
-                        </tr>
+                            <tr>
+                                <th>Problema</th>
+                                <th>Estatus</th>
+                                <th>Fecha</th>
+                            </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="sumbission in tt.queriedSubmissions">
-                            <td>{{ sumbission.problemName }}</td>
-                            <td>{{ submission.accepted }}</td>
-                            <td>{{ sumbission.lastAttemptDate | date:'medium' }}</td>
-                        </tr>
+                            <tr ng-repeat="sumbission in tt.queriedSubmissions">
+                                <td>{{ sumbission.problemName }}</td>
+                                <td>{{ submission.accepted }}</td>
+                                <td>{{ sumbission.lastAttemptDate | date:'medium' }}</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
+                @if (User.IsInRole("Admin"))
+                {
+                    <div id="notes">
+                        <p>@Model.Notes</p>
+                    </div>
+                }
             </div>
 
         </div>
@@ -122,8 +129,8 @@
     <script src="~/lib/angular/angular.min.js"></script>
 
     @*<script src="~/js/controllers/app-submissions.js"></script>
-    <script src="~/js/controllers/submissionsController.js"></script>*@
-<script src="~/js/controllers/app-attended-events.js"></script>
+        <script src="~/js/controllers/submissionsController.js"></script>*@
+    <script src="~/js/controllers/app-attended-events.js"></script>
     <script src="~/js/controllers/attendedEventsController.js"></script>
-        
+
 }
