--- a/src/Club/Views/Home/Index.cshtml
+++ b/src/Club/Views/Home/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
 }
 <h1>@TranslateLocalizer["Hello"]</h1>
+<h2>@System.Threading.Thread.CurrentThread.CurrentCulture</h2>
 <form asp-antiforgery="true" asp-controller="Home" asp-action="SetCulture">
 
     <select name="culture" id="culture">
-        <option value="c=es-MX|uic=es-MX">ES</option>
-        <option value="c=en-US|uic=en-US">EN</option>
+        <option value="es-MX">ES</option>
+        <option value="en-US">EN</option>
     </select>
 
     <button class="btn" type="submit">Change</button>
