--- a/src/Club/Views/Events/Create.cshtml
+++ b/src/Club/Views/Events/Create.cshtml
@@ -56,13 +56,13 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label asp-for="Start"></label>
-            <input asp-for="Start" class="form-control" />
+            <input asp-for="Start" autocomplete="off" class="form-control" />
             <span asp-validation-for="Start"></span>
         </div>
 
         <div class="form-group col-md-6">
             <label asp-for="End"></label>
-            <input asp-for="End" class="form-control" />
+            <input asp-for="End"  autocomplete="off" class="form-control" />
             <span asp-validation-for="End"></span>
         </div>
     </div>
