--- a/src/Club/Views/Events/Edit.cshtml
+++ b/src/Club/Views/Events/Edit.cshtml
@@ -56,13 +56,22 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label asp-for="Start"></label>
-            <input asp-for="Start" class="form-control" />
-            <span asp-validation-for="Start"></span>
+            @if (Model.Status == EventStatus.Future)
+            {
+                <input asp-for="Start" autocomplete="off" class="form-control" />
+                <span asp-validation-for="Start"></span>
+            }
+            else
+            {
+                <p class="form-control-static">@Model.Start (el evento ha comenzado)</p>
+                <input type="hidden" name="Start" value="@Model.Start" />
+
+            }
         </div>
 
         <div class="form-group col-md-6">
             <label asp-for="End"></label>
-            <input asp-for="End" class="form-control" />
+            <input asp-for="End" autocomplete="off" class="form-control" />
             <span asp-validation-for="End"></span>
         </div>
     </div>
