--- a/src/Club/Views/Settings/Index.cshtml
+++ b/src/Club/Views/Settings/Index.cshtml
@@ -64,4 +64,7 @@
             </div>
         </div>
     </form>
+    <br />
+    <br />
+    <a asp-action="export" class="btn btn-default btn-block">Exportar</a>
 </div>
